# test03

./: .env  app.db  pyproject.toml  requirements.txt
app/: main.py
app/api/routers/: auth.py  clientes.py
app/core/: config.py
app/db/: session.py
app/models/: models.py
app/schemas/: schemas.py
app/services/: auth_service.py  cliente_service.py
