[project]
name = "api-web-proyecto-v03"
version = "0.3.0"
description = "API Web con JWT, Rate Limiting y SQLite para gestión de Clientes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-jose[cryptography]",
  "passlib",
  "bcrypt==4.3.0",
  "slowapi",
  "pydantic",
  "pydantic[email]",
  "python-multipart",
  "sqlalchemy>=2.0.0"
]